--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a, API Rest",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app/dist/app.js",
+    "build": "tsc"
   },
   "author": "LOLIVE Mikael",
   "license": "ISC",
@@ -19,6 +20,11 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "morgan": "^1.10.0"
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
+    "morgan": "^1.10.0",
+    "typescript": "^5.5.4"
   }
 }
